--- a/packages/kysely/tsconfig.json
+++ b/packages/kysely/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src"],
+  "include": ["src", "migrations"],
   "exclude": ["node_modules", "dist"]
 }
