--- a/packages/drizzle/package.json
+++ b/packages/drizzle/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "@repo/kysely",
+  "name": "@repo/drizzle",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "@types/pg": "^8.11.10",
-    "kysely-ctl": "^0.9.0",
     "typescript": "latest"
   },
   "dependencies": {
-    "kysely": "^0.27.4",
     "pg": "^8.13.1",
     "tsx": "^4.19.2"
   }
