--- a/packages/drizzle/package.json
+++ b/packages/drizzle/package.json
@@ -6,10 +6,15 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.28.1",
+    "tsx": "^4.19.2",
     "typescript": "latest"
   },
   "dependencies": {
-    "pg": "^8.13.1",
-    "tsx": "^4.19.2"
+    "@vercel/postgres": "^0.10.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.4",
+    "pg": "^8.13.1"
   }
 }
