--- a/apps/prisma-tutorial/package.json
+++ b/apps/prisma-tutorial/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "drizzle-tutorial",
+  "name": "prisma-tutorial",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "@vercel/postgres": "^0.10.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.4",
+    "@prisma/adapter-neon": "^5.22.0",
+    "@prisma/client": "^5.22.0",
     "next": "14.2.16",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -21,7 +22,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
