--- a/apps/drizzle-tutorial/package.json
+++ b/apps/drizzle-tutorial/package.json
@@ -13,9 +13,11 @@
     "@vercel/postgres": "^0.10.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.4",
+    "drizzle-seed": "^0.1.2",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/node": "^20",
