--- a/apps/kysely-tutorial/package.json
+++ b/apps/kysely-tutorial/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@vercel/postgres-kysely": "^0.10.0",
+    "kysely": "^0.27.4",
+    "kysely-neon": "^1.3.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18"
