--- a/apps/prisma-accelerate-tutorial/package.json
+++ b/apps/prisma-accelerate-tutorial/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "kysely-tutorial",
+  "name": "prisma-tutorial",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.4.26",
-    "@vercel/postgres-kysely": "^0.10.0",
-    "kysely": "^0.27.4",
-    "kysely-neon": "^1.3.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/adapter-neon": "^5.22.0",
+    "@prisma/client": "^5.22.0",
     "next": "14.2.16",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -23,7 +24,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
-    "kysely-codegen": "^0.17.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
