--- a/packages/kysely/package.json
+++ b/packages/kysely/package.json
@@ -11,6 +11,7 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@google-cloud/bigquery-storage": "^4.10.1",
     "kysely": "^0.27.4",
     "pg": "^8.13.1",
     "tsx": "^4.19.2"
